Increased pad-size of headers (annular ring) + 0603 LED footprint (wider pads).

--- a/SOP24/MBI5030-SOP24_starter-board.cmp
+++ b/SOP24/MBI5030-SOP24_starter-board.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by PcbNew date = Mon 04 Feb 2013 02:50:29 PM CET
+Cmp-Mod V01 Created by PcbNew date = Sat 09 Feb 2013 10:38:47 PM CET
 
 BeginCmp
 TimeStamp = /50426442;
@@ -18,112 +18,112 @@ BeginCmp
 TimeStamp = /50FC3340;
 Reference = D1;
 ValeurCmp = LED;
-IdModule  = MADW__CHIPLED-0603;
+IdModule  = MADW__CHIPLED-0603-tiny;
 EndCmp
 
 BeginCmp
 TimeStamp = /50FC334F;
 Reference = D2;
 ValeurCmp = LED;
-IdModule  = MADW__CHIPLED-0603;
+IdModule  = MADW__CHIPLED-0603-tiny;
 EndCmp
 
 BeginCmp
 TimeStamp = /50FC33C2;
 Reference = D3;
 ValeurCmp = LED;
-IdModule  = MADW__CHIPLED-0603;
+IdModule  = MADW__CHIPLED-0603-tiny;
 EndCmp
 
 BeginCmp
 TimeStamp = /50FC33D9;
 Reference = D4;
 ValeurCmp = LED;
-IdModule  = MADW__CHIPLED-0603;
+IdModule  = MADW__CHIPLED-0603-tiny;
 EndCmp
 
 BeginCmp
 TimeStamp = /50FC33EB;
 Reference = D5;
 ValeurCmp = LED;
-IdModule  = MADW__CHIPLED-0603;
+IdModule  = MADW__CHIPLED-0603-tiny;
 EndCmp
 
 BeginCmp
 TimeStamp = /50FC33F1;
 Reference = D6;
 ValeurCmp = LED;
-IdModule  = MADW__CHIPLED-0603;
+IdModule  = MADW__CHIPLED-0603-tiny;
 EndCmp
 
 BeginCmp
 TimeStamp = /50FC33DF;
 Reference = D7;
 ValeurCmp = LED;
-IdModule  = MADW__CHIPLED-0603;
+IdModule  = MADW__CHIPLED-0603-tiny;
 EndCmp
 
 BeginCmp
 TimeStamp = /50FC33E5;
 Reference = D8;
 ValeurCmp = LED;
-IdModule  = MADW__CHIPLED-0603;
+IdModule  = MADW__CHIPLED-0603-tiny;
 EndCmp
 
 BeginCmp
 TimeStamp = /50FC38AC;
 Reference = D9;
 ValeurCmp = LED;
-IdModule  = MADW__CHIPLED-0603;
+IdModule  = MADW__CHIPLED-0603-tiny;
 EndCmp
 
 BeginCmp
 TimeStamp = /50FC38B2;
 Reference = D10;
 ValeurCmp = LED;
-IdModule  = MADW__CHIPLED-0603;
+IdModule  = MADW__CHIPLED-0603-tiny;
 EndCmp
 
 BeginCmp
 TimeStamp = /50FC38B8;
 Reference = D11;
 ValeurCmp = LED;
-IdModule  = MADW__CHIPLED-0603;
+IdModule  = MADW__CHIPLED-0603-tiny;
 EndCmp
 
 BeginCmp
 TimeStamp = /50FC38BE;
 Reference = D12;
 ValeurCmp = LED;
-IdModule  = MADW__CHIPLED-0603;
+IdModule  = MADW__CHIPLED-0603-tiny;
 EndCmp
 
 BeginCmp
 TimeStamp = /50FC38D0;
 Reference = D13;
 ValeurCmp = LED;
-IdModule  = MADW__CHIPLED-0603;
+IdModule  = MADW__CHIPLED-0603-tiny;
 EndCmp
 
 BeginCmp
 TimeStamp = /50FC38D6;
 Reference = D14;
 ValeurCmp = LED;
-IdModule  = MADW__CHIPLED-0603;
+IdModule  = MADW__CHIPLED-0603-tiny;
 EndCmp
 
 BeginCmp
 TimeStamp = /50FC38C4;
 Reference = D15;
 ValeurCmp = LED;
-IdModule  = MADW__CHIPLED-0603;
+IdModule  = MADW__CHIPLED-0603-tiny;
 EndCmp
 
 BeginCmp
 TimeStamp = /50FC38CA;
 Reference = D16;
 ValeurCmp = LED;
-IdModule  = MADW__CHIPLED-0603;
+IdModule  = MADW__CHIPLED-0603-tiny;
 EndCmp
 
 BeginCmp
